# novel_tools

./: .gitignore  1.txt  IMPROVEMENTS_PROPOSAL.md  README.md  antigravity.yaml.example  format_script.py  pyproject.toml  requirements.txt  sync_check.py  sync_gdrive.py  target_extracted.txt  tmp_input.txt  walkthrough.md
.agents/: AGENTS.md
.agents/workflows/: novel_review_pipeline.md
.github/: issue_template.md  pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
skills/author-nefes/: SKILL.md
skills/character-voice-checker/: SKILL.md
skills/consistency-checker/: SKILL.md
skills/foreshadowing-tracker/: SKILL.md
skills/local-ci-developer/: SKILL.md
skills/logic-consistency-reviewer/: SKILL.md
skills/novel-formatter/: SKILL.md  formatter.py  novel_formatter_helper.py
skills/novel-formatter/scripts/: novel_formatter_helper.py
skills/novel-writer/: SKILL.md  writer_helper.py
skills/novel-writer-antigravitycli/: SKILL.md  writer_cli.py
skills/novel_writer_antigravitycli/: writer_cli.py
skills/novel_writer_geminicli/: SKILL.md  writer_cli.py
skills/plot-pacing-analyzer/: SKILL.md
skills/plot-reviewer-conflict/: SKILL.md
skills/plot-reviewer-structure/: SKILL.md
skills/rhythm-vocabulary-optimizer/: SKILL.md
skills/show-dont-tell-enhancer/: SKILL.md
skills/style-expression-reviewer/: SKILL.md
skills/text-reviewer-logic/: SKILL.md
skills/text-reviewer-style/: SKILL.md
skills/webui-developer/: SKILL.md
skills/world-logic-guard/: SKILL.md
src/: apply_findings.py  filter_context.py  integrate_findings.py  integrate_plot_findings.py  review_server.py  run_plot_review_pipeline.py  run_review_pipeline.py  sync_check.py  sync_gdrive.py
src/findings/: __init__.py  applier.py  replacer.py  text_matcher.py
src/pipeline/: phase_context_filter.py  phase_formatter.py  phase_integration.py  phase_review.py
src/routes/: api.py  novels.py  plots.py  sync.py
src/services/: novel_service.py  pipeline_service.py
src/static/css/: style.css
src/static/js/: app.js  state.js  utils.js
src/templates/: index.html
src/templates/components/: sidebar.html
src/utils/: ai_cli_executor.py  ai_client.py  ai_exceptions.py  ai_model_parser.py  ai_retry.py  ai_task.py  detect_bloat.py  file_io.py  logger.py  plot_parser.py  project_config.py  project_paths.py  skill_registry.py  yaml_handler.py
tests/: conftest.py  test_agy_mocks.py  test_ai_cli_executor.py  test_ai_client.py  test_ai_model_parser.py  test_ai_retry.py  test_ai_task.py  test_ai_task_novel.py  test_apply_findings.py  test_apply_findings_robust.py  test_detect_bloat.py  test_filter_context.py  test_gdrive_mocks.py  test_integrate_findings.py  test_integrate_plot_findings.py  test_logger.py  test_novel_service_archive.py  test_plot_parser.py  test_project_config.py  test_project_paths.py  test_review_server.py  test_run_plot_review_pipeline.py  test_run_review_pipeline.py  test_skill_registry.py  test_sync_check.py  test_sync_gdrive.py  test_writer_cli.py  test_yaml_handler.py
(+18 files in other folders)
