[tool.poetry]
name = "novel-tools-system"
version = "0.1.0"
description = "小説の整合性と世界観をチェックするエージェント環境"
authors = ["sshioyama"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
google-auth = "^2.49.1"
google-api-python-client = "^2.192.0"
pyyaml = "^6.0.3"
fastapi = "^0.138.0"
uvicorn = "^0.49.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
mypy = "^1.10.1"
types-pyyaml = "^6.0.12.20240311"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx2 = "^2.4.0"


[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C90", "PLR"]
ignore = ["E501", "B007", "B904", "PLR0913", "PLR2004"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"src/apply_findings.py" = ["C901", "PLR0912", "PLR0915"]
"src/integrate_findings.py" = ["C901", "PLR0912", "PLR0915"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true


[tool.poetry.scripts]
run-review = "src.run_review_pipeline:main"
review-server = "src.review_server:main"
apply-findings = "src.apply_findings:main"
sync-gdrive = "src.sync_gdrive:main"
detect-bloat = "src.utils.detect_bloat:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
